--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "license": "Apache-2.0",
   "type": "module",
   "dependencies": {
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "mri": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
